Eliminar historial en los inputs

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <div class="container">
                     <form id="formulario" class="row">
                         <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-12">
-                            <p><label for="objetivo">Objetivo*:</label></p>
+                            <p><label for="objetivos">Objetivo*:</label></p>
                         </div>
                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-9 col-12">
-                            <input class="form-control" type="text" name="objetivo" id="objetivo"
+                            <input class="form-control" type="text" name="objetivos" id="objetivos"
                                 placeholder="Ingrese el objetivo a alacanzar" onchange="objetivoAlcanzar(this);" />
                         </div>
                         <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-12"></div>
@@ -34,7 +34,7 @@
                             <p><label for="usuario">Buscar Usuario:</label></p>
                         </div>
                         <div class="input-group col-xl-4 col-lg-4 col-md-4 col-sm-10 col-12">
-                            <input type="text" class="form-control" id="usuariobuscar" name="usuariobuscar"
+                            <input type="text" class="form-control" id="usuariobusca" name="usuariobusca"
                                 placeholder="Ej: Cookiespex9">
                             <div class="input-group-append" id="bus">
                                 <button class="btn btn-outline-light" id="buscar" type="button"
@@ -43,20 +43,20 @@
                         </div>
 
                         <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-12">
-                            <p><label for="nivelact">Nivel Actual:</label></p>
+                            <p><label for="nivelactu">Nivel Actual:</label></p>
                         </div>
                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-8 col-12">
-                            <input class="form-control" type="text" name="nivelact" id="nivelact"
+                            <input class="form-control" type="text" name="nivelactu" id="nivelactu"
                                 placeholder="Ingrese su nivel actual" onchange="nivelActual(this);" />
                         </div>
                         <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-12">
                             <p style="text-align: center;">ó</p>
                         </div>
                         <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-12">
-                            <p><label for="expact">Exp Actual:</label></p>
+                            <p><label for="expactu">Exp Actual:</label></p>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-10 col-12">
-                            <input class="form-control" type="text" name="expact" id="expact"
+                            <input class="form-control" type="text" name="expactu" id="expactu"
                                 placeholder="Ingrese su exp actual(Sin signos de puntuacion)"
                                 onchange="experenciaActual(this);" />
                         </div>
