--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Last-Modified" content="0">
+    <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
+    <meta http-equiv="Pragma" content="no-cache">
     <meta name="description" content="osrs" />
     <meta name="author" content="Cookies Pex" />
     <link rel="icon" href="">
@@ -23,10 +27,10 @@
                 <div class="container">
                     <form id="formulario" class="row">
                         <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-12">
-                            <p><label for="objetivos">Objetivo*:</label></p>
+                            <p><label for="objetivs">Objetivo*:</label></p>
                         </div>
                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-9 col-12">
-                            <input class="form-control" type="text" name="objetivos" id="objetivos"
+                            <input class="form-control" type="text" name="objetivs" id="objetivs"
                                 placeholder="Ingrese el objetivo a alacanzar" onchange="objetivoAlcanzar(this);" />
                         </div>
                         <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-12"></div>
@@ -34,7 +38,7 @@
                             <p><label for="usuario">Buscar Usuario:</label></p>
                         </div>
                         <div class="input-group col-xl-4 col-lg-4 col-md-4 col-sm-10 col-12">
-                            <input type="text" class="form-control" id="usuariobusca" name="usuariobusca"
+                            <input type="text" class="form-control" id="usuariobussca" name="usuariobussca"
                                 placeholder="Ej: Cookiespex9">
                             <div class="input-group-append" id="bus">
                                 <button class="btn btn-outline-light" id="buscar" type="button"
@@ -43,20 +47,20 @@
                         </div>
 
                         <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-12">
-                            <p><label for="nivelactu">Nivel Actual:</label></p>
+                            <p><label for="nivelactul">Nivel Actual:</label></p>
                         </div>
                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-8 col-12">
-                            <input class="form-control" type="text" name="nivelactu" id="nivelactu"
+                            <input class="form-control" type="text" name="nivelactul" id="nivelactul"
                                 placeholder="Ingrese su nivel actual" onchange="nivelActual(this);" />
                         </div>
                         <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-12">
                             <p style="text-align: center;">ó</p>
                         </div>
                         <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-12">
-                            <p><label for="expactu">Exp Actual:</label></p>
+                            <p><label for="expactul">Exp Actual:</label></p>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-10 col-12">
-                            <input class="form-control" type="text" name="expactu" id="expactu"
+                            <input class="form-control" type="text" name="expactul" id="expactul"
                                 placeholder="Ingrese su exp actual(Sin signos de puntuacion)"
                                 onchange="experenciaActual(this);" />
                         </div>
