--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <div class="container">
                     <form id="formulario" class="row">
                         <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-12">
-                            <p><label for="objetivss">Objetivo*:</label></p>
+                            <p><label for="objetivoss">Objetivo*:</label></p>
                         </div>
                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-9 col-12">
-                            <input class="form-control" type="text" name="objetivss" id="objetivss"
+                            <input class="form-control" type="text" name="objetivoss" id="objetivoss"
                                 placeholder="Ingrese el objetivo a alacanzar" onchange="objetivoAlcanzar(this);" required />
                         </div>
                         <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-12"></div>
@@ -38,7 +38,7 @@
                             <p><label for="usuario">Buscar Usuario:</label></p>
                         </div>
                         <div class="input-group col-xl-4 col-lg-4 col-md-4 col-sm-10 col-12">
-                            <input type="text" class="form-control" id="usuariobusscar" name="usuariobusscar"
+                            <input type="text" class="form-control" id="usuariobusscarr" name="usuariobusscarr"
                                 placeholder="Ej: Cookiespex9">
                             <div class="input-group-append" id="bus">
                                 <button class="btn btn-outline-light" id="buscar" type="button"
@@ -57,10 +57,10 @@
                             <p style="text-align: center;">ó</p>
                         </div>
                         <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-12">
-                            <p><label for="expactul">Exp Actual:</label></p>
+                            <p><label for="expactull">Exp Actual:</label></p>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-10 col-12">
-                            <input class="form-control" type="text" name="expactul" id="expactul"
+                            <input class="form-control" type="text" name="expactull" id="expactull"
                                 placeholder="Ingrese su exp actual(Sin signos de puntuacion)"
                                 onchange="experenciaActual(this);" />
                         </div>
