Cambiando intervalos de tiempo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>OSRS Aplication</title>
 </head>
 
-<body>
+<body onload="setInterval('location.reload()',300000)">
     <div id="fondo">
         <div class="container">
             <h1>Calculador de Splash <b class="byby">by Cookies Pex</b></h1>
